Letter spacing fixed

--- a/src/Features/LandingPage/Components/HeroSection.css
+++ b/src/Features/LandingPage/Components/HeroSection.css
@@ -1,4 +1,3 @@
-/* BackgroundVideo.css */
 .video-container {
   position: relative;
   height: 100vh;
@@ -28,13 +27,12 @@
 }
 
 .content h1 {
-  font-family: "Karantina-Light";
   font-size: 150px;
   text-transform: uppercase;
+  letter-spacing: 6px;
 }
 
 .content p {
-  font-family: "Karantina-Light";
   font-size: 20px;
   margin-bottom: 40px;
 }
